Adding ALT tags to images

--- a/index.html
+++ b/index.html
@@ -18,42 +18,42 @@
 		
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/HTML5">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/240px-HTML5_logo_and_wordmark.svg.png"/>
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/240px-HTML5_logo_and_wordmark.svg.png" alt="HTML Logo"/>
 				<h2>HTML5</h2>
 			</a>
 		</div>
 		
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">
-				<img src="https://www.lifewire.com/thmb/s9kfBeuaF14VAGgE-SjDB-L0ZDs=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/css3-57b597e85f9b58b5c2b338de.png"/>
+				<img src="https://www.lifewire.com/thmb/s9kfBeuaF14VAGgE-SjDB-L0ZDs=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/css3-57b597e85f9b58b5c2b338de.png" alt="CSS3 Logo"/>
 				<h2>CSS3</h2>
 			</a>
 		</div>
 		
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/JavaScript">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/440px-Unofficial_JavaScript_logo_2.svg.png"/>
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/440px-Unofficial_JavaScript_logo_2.svg.png" alt="Javascript Logo"/>
 			 	<h2>JavaScript</h2>
 			</a>
 		</div>
 		
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/Cloud9_IDE">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Cloud9IDE.png"/>
+				<img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Cloud9IDE.png" alt="Cloud9 Logo"/>
 				<h2>Cloud9</h2>
 			</a>
 		</div>
 		
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/Git">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Git-logo.svg"/>
+				<img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Git-logo.svg" alt="GIT Logo"/>
 				<h2>Git</h2>
 			</a>
 		</div>
 		
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/GitHub">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/2/24/GitHub_logo_2013_padded.svg"/>
+				<img src="https://upload.wikimedia.org/wikipedia/commons/2/24/GitHub_logo_2013_padded.svg" alt="GitHub Logo"/>
 				<h2>GitHub</h2>
 			</a>
 		</div>
