--- a/stream2.html
+++ b/stream2.html
@@ -17,42 +17,42 @@
 
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/Python_(programming_language)">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/f/f8/Python_logo_and_wordmark.svg"/>
+				<img src="https://upload.wikimedia.org/wikipedia/commons/f/f8/Python_logo_and_wordmark.svg" alt="Python Logo"/>
 				<h2>Python</h2>
 			</a>
 		</div>
 		
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/Flask_(web_framework)">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Flask_logo.svg"/>
+				<img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Flask_logo.svg" alt="Flask Logo"/>
 				<h2>Flask</h2>
 			</a>
 		</div>
 		
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/MongoDB">
-				<img src="https://upload.wikimedia.org/wikipedia/en/4/45/MongoDB-Logo.svg"/>
+				<img src="https://upload.wikimedia.org/wikipedia/en/4/45/MongoDB-Logo.svg" alt="MongoDB Logo"/>
 			 	<h2>MongoDB</h2>
 			</a>
 		</div>
 		
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/MySQL">
-				<img src="https://upload.wikimedia.org/wikipedia/en/6/62/MySQL.svg"/>
+				<img src="https://upload.wikimedia.org/wikipedia/en/6/62/MySQL.svg" alt="MySQL Logo"/>
 				<h2>MySQL</h2>
 			</a>
 		</div>
 		
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/Git">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Git-logo.svg"/>
+				<img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Git-logo.svg" alt="Git Logo"/>
 				<h2>Git</h2>
 			</a>
 		</div>
 		
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/GitHub">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/2/24/GitHub_logo_2013_padded.svg"/>
+				<img src="https://upload.wikimedia.org/wikipedia/commons/2/24/GitHub_logo_2013_padded.svg" alt="GitHub Logo"/>
 				<h2>GitHub</h2>
 		</div>
 
